[package]
name = "hw2"
version = "0.1.0"
authors = ["Nathaniel Sherrett <41343245+sherretten@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy_rsa_lib = { git = "http://github.com/pdx-cs-rust/toy-rsa-lib" }